# agent-common

./: .gitignore  README.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.py
.circleci/: config.yml
apollo/egress/agent/backend/: backend_client.py
apollo/egress/agent/config/: config_keys.py  local_config.py
apollo/egress/agent/events/: sse_client_receiver.py
apollo/egress/agent/service/: base_egress_service.py  file_login_token_provider.py  login_token_provider.py  logs_service.py  metrics_service.py  results_processor.py  storage_service.py
apollo/egress/agent/utils/: result_utils.py  utils.py
tests/: test_config_manager.py
