[project]
name = "agent-common"
version = "0.0.1"
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dynamic = ["dependencies"]
authors = [
  { name = "Monte Carlo Data, Inc.", email = "info@montecarlodata.com" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.12",
]

[tool.pyright]
enableTypeIgnoreComments = true
exclude = [
  "**/__pycache__",
  "**/.*",
  "tests",
  "examples",
  ".venv",
]
reportMissingParameterType = true
reportMissingTypeArgument = false
typeCheckingMode = "basic"
venv = ".venv"
venvPath = "."

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
pythonpath = "."

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.in"]}