[project]
name = "agent-common"
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dynamic = ["dependencies", "version"]
authors = [
  { name = "Monte Carlo Data, Inc.", email = "info@montecarlodata.com" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.12",
]

[tool.pyright]
enableTypeIgnoreComments = true
exclude = [
  "**/__pycache__",
  "**/.*",
  "tests",
  "examples",
  ".venv",
]
reportMissingParameterType = true
reportMissingTypeArgument = false
typeCheckingMode = "basic"
venv = ".venv"
venvPath = "."

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
pythonpath = "."

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.in"]}

[build-system]
requires = ["setuptools>=67.7.2", "setuptools_scm[toml]>=8.0"]
build-backend = "setuptools.build_meta"
